<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/green_background"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" 
   android:stretchColumns="1">
  
  <TableRow>
       <TextView
           android:text="@string/name"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/name"
           android:text="@string/name"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>
   
   <TableRow>
       <TextView
           android:text="@string/surname"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/surname"
           android:text="@string/surname"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>

   <TableRow>
       <TextView
           android:text="@string/email"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/email"
           android:text="@string/email"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>         
   
   <TableRow>
       <TextView
           android:text="@string/username"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/username"
           android:text="@string/username"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>

   <TableRow>                      
       <TextView
           android:text="@string/password"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/password"
           android:text="@string/password"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>

   <TableRow
       android:gravity="right">

       <Button android:id="@+id/cancel_button"
           android:text="@string/cancel" 
           android:textStyle="bold"
           android:padding="3dip" />

       <Button android:id="@+id/register_button"
           android:text="@string/register_label"
           android:textStyle="bold"
           android:padding="3dip" />
   </TableRow>
</TableLayout>
