<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_background">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewTopTitle"
        android:text="@string/app_name"
        android:textColor="@color/logo_color"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="top|center"
        android:textSize="@dimen/logo_size"></TextView>
   <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_height="130px"
        android:layout_width="130px"
	    android:layout_x="10px"
	    android:layout_y="10px">
        <TableRow
            android:id="@+id/TableRow01"
            android:layout_height="130px"
            android:layout_width="130px"
	        android:layout_x="10px"
	        android:layout_y="10px">
            <ImageView
                android:id="@+id/ImageView2_Left"
                android:layout_width="120px"
                android:layout_height="120px"
		        android:layout_x="10px"
		        android:layout_y="10px"
                android:src="@drawable/roulette"></ImageView>
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewBottomTitle"
        android:text="@string/bottom_title"
        android:textColor="@color/yellow"
        android:textSize="@dimen/logo_size"></TextView>
    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:text="@string/app_version"
        android:textSize="@dimen/version_size" 
        android:textColor="@color/white"
        android:background="@color/green_background"
        android:layout_height="fill_parent"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"></TextView>
</LinearLayout>